# Faculty_appraisal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  api_changes_v2.txt  api_instruction.txt  check_all_db_columns.py  check_all_db_columns_v2.py  check_db_columns.py  db_migration_may_2026.sql  extra_instructions.txt  fix_api_params.py  list_tables.py  main.py  output.txt  project_complete_schema.sql  pyproject.toml  request.txt  setup_test_db.py  test_syntax.py
.claude/: settings.json  settings.local.json
Docs/: API_V1_REFERENCE.md  ENVIRONMENT_SETUP.md  LOCAL_DEPLOYMENT_GUIDE.md  MIGRATION_STRATEGY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  gemini.md  project_complete_schema (1).sql  schema.sql
Docs/api/: appraisal_get_snapshot.md  appraisal_get_status.md  appraisal_save_draft.md  appraisal_submit.md  auth_change_password.md  auth_get_me.md  auth_login.md  auth_register.md  auth_update_me.md  auth_verify_email.md  dashboard_faculty_snapshot.md  dashboard_subordinates.md  documents_list.md  non_teaching_appraisal.md  non_teaching_review.md  non_teaching_subordinates.md  remarks_submit_review.md  upload_file.md
Docs/forms/: 25-26 Appraisal form for Non-Teaching (1).docx  Faculty Appraisal ForDesign Applied Arts_AY 2025-26.docx  Faculty Appraisal For_Engg_Mgt_AY 2025-26.docx  Faculty Appraisal For_Media&Communication Studies_AY 2025-26.docx  Faculty Appraisal Guidelines_AY 2025-26 28.04.2026.docx  Faculty Appraisal form 28.04.2026.docx
Docs/reference/: Non_teaching.md  faculty.txt  form_analysis.txt  hierarchi.txt  role_architecture.txt
api_docs/: Auth_Session_Flow.md  Auth_login.md  Auth_logout.md  Auth_protected.md  Auth_register.md  Auth_session.md  Auth_verify_email.md  Overall_create_enclosure.md  Part_A_create_acr.md
migrations/: 001_unique_constraints.sql  002_fix_appraisal_role_constraint.sql  003_create_feedback_table.sql  004_add_indexes.sql  005_add_is_verified_column.sql
src/: main.py
src/api/: auth.py  utils.py
src/crud/: __init__.py  core.py  non_teaching.py  part_a.py  part_b.py
src/models/: __init__.py  (+4 more)
tests/: conftest.py  test_hierarchy_scenarios.py  test_local_server_final.py  test_new_endpoints.py  test_non_teaching_visibility_unit.py  test_non_teaching_workflow.py  test_score_visibility_unit.py  test_v1_auth.py  test_v1_authority.py  test_v1_workflow.py
(+131 files in other folders)
