[project]
name = "faculty-appraisal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.30.0",
    "bcrypt==3.2.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-mail>=1.6.3",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "orjson>=3.10.15",
    "passlib==1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "itsdangerous>=2.2.0",
    "sqladmin>=0.25.0",
    "supabase>=2.29.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
